kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test
spec:
  selector:
    app: test
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
